unpackaged/main/default/objects/whistic_profile__Whistic_Profile_Assignment__c/whistic_profile__Whistic_Profile_Assignment__c.object-meta.xml
<CustomObject>
    <label>Whistic Profile Assignment</label>
    <nameField>
        <displayFormat>WPA-{0000}</displayFormat>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Whistic Profile Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>