unpackaged/main/default/objects/whistic_profile__Whistic_Profile_Assignment__c/fields/whistic_profile__Salesforce_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Salesforce_Profile_Name__c</fullName>
    <label>Salesforce Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>