unpackaged/main/default/objects/whistic_profile__Whistic_Profile_Assignment__c/fields/whistic_profile__Security_Profile__c.field-meta.xml
<CustomField>
    <fullName>whistic_profile__Security_Profile__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Security Profile</label>
    <referenceTo>whistic_profile__Security_Profile__c</referenceTo>
    <relationshipLabel>Whistic Profile Assignments</relationshipLabel>
    <relationshipName>Whistic_Profile_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>