unpackaged/main/default/objects/whistic_profile__Whistic_Profile_Assignment__c/listViews/whistic_profile__All.listView-meta.xml
<ListView>
    <fullName>whistic_profile__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>