unpackaged/main/default/objects/whistic_profile__Whistic_Profile_Assignment__c/listViews/whistic_profile__Default.listView-meta.xml
<ListView>
    <fullName>whistic_profile__Default</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>whistic_profile__Salesforce_Profile__c</columns>
    <columns>whistic_profile__Salesforce_Profile_Name__c</columns>
    <columns>whistic_profile__Security_Profile__c</columns>
    <columns>whistic_profile__Security_Profile_Name__c</columns>
    <filterScope>Mine</filterScope>
    <label>Default</label>
</ListView>